# memclaw

./: 项目提案.md  项目结构.md
OpenClaw-MemBench/: .env  .env.example  .gitignore  DOCKER_USAGE.md  PERFORMANCE_OPTIMIZATION.md  README.md  README.zh-CN.md  baseline_comparison_task1.md  docker-compose.yml  requirements-baselines.txt  requirements.txt
OpenClaw-MemBench/baselines/: __init__.py  base.py  hierarchical_memory.py  keyword_extract.py  mem0_baseline.py  recursive_summary.py  sliding_window.py  test_adapters.py  vector_retrieval.py
OpenClaw-MemBench/configs/: budgets.yaml  capabilities.yaml  compression_methods.yaml
OpenClaw-MemBench/docker/: Dockerfile  Dockerfile.executor  Dockerfile.openclaw  Dockerfile.openclaw.local  Dockerfile.optimized  Dockerfile.standalone  Dockerfile.windows  README.md
OpenClaw-MemBench/docs/: ASSET_TODO.md  BASELINES.md  BASELINE_INTEGRATION_GUIDE.md  BASELINE_QUICK_REFERENCE.md  CAPABILITY_BASED_DESIGN.md  CAPABILITY_FLOW.md  DOCKER_SETUP.md  GRADING.md  INSTALL_EN.md  INSTALL_ZH.md  LCM_INTEGRATION.md  OPEN_SOURCE_BASELINES.md  PROJECT_STATUS.md  README.md
OpenClaw-MemBench/eval/: compare_profiles.py  run_all_baselines.py  run_baselines.py  run_batch.py  validate_lcm.py  visualize_baselines.py
OpenClaw-MemBench/outputs/: compare_compressed_api_20260417_005318.json  compare_compressed_api_20260417_010819.json  compare_full_api_20260417_005318.json  (+30 more)
OpenClaw-MemBench/outputs/02_Version_Update/02_Version_Update_task_06_python_runtime_switch/20260419_113009/attempt_1/results/: ci.yml  manifest.csv  pyproject.toml  summary.md
(+2124 files in other folders)
