[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example-project"
dynamic = ["version"]
description = "Example project for Python 3.11"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Example Author", email = "author@example.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "requests>=2.28.0",
    "pydantic>=2.0.0",
]

[tool.uv]
package = true

[tool.hatch.version]
path = "src/example_project/__about__.py"